methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:22: error: not found: value growFlowers
growFlowers() {
^