methods.flowerpot.FlowerPot.scala.code
def point() {
  baisseBrosse()
  leveBrosse()
}

def flower(c:Color) {
  setCouleurBrosse(c)
  gauche()
  for(i<- 1 to 4) {
    avance()
    droite()
    avance()
    point()
  }
  droite()
  avance()
  setCouleurBrosse(Color.YELLOW)
  point()
  
}

growFlowers() {
  flower(Color.RED)
droite()
for(i<- 1 to 4) {
  avance()
}
droite()
flower(Color.PINK)
for(j<- 1 to 4) {
  avance()
}
flower(Color.GREEN)
gauche()
for(k <- 1 to 4) {
  avance()
}
droite()
flower(Color.BLUE)
recule()
recule()
droite()
avance()
avance()
gauche()
flower(Color.ORANGE)
recule()
recule()
droite()
avance()
avance()
gauche()
  
}
